--- a/openApiDocs/v1.0/Mail.yml
+++ b/openApiDocs/v1.0/Mail.yml
@@ -32,16 +32,6 @@ paths:
             type: array
             items:
               type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              type: string
       responses:
         2XX:
           description: Retrieved navigation property
@@ -101,7 +91,6 @@ paths:
           x-ms-docs-key-type: user
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -117,16 +106,6 @@ paths:
         - name: $select
           in: query
           description: Select properties to be returned
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
           style: form
           explode: false
           schema:
@@ -201,16 +180,6 @@ paths:
         - name: $select
           in: query
           description: Select properties to be returned
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
           style: form
           explode: false
           schema:
@@ -316,7 +285,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: user
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -348,7 +316,6 @@ paths:
             type: string
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -588,7 +555,6 @@ paths:
             type: string
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -861,7 +827,6 @@ paths:
           x-ms-docs-key-type: mailFolder
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -877,16 +842,6 @@ paths:
         - name: $select
           in: query
           description: Select properties to be returned
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
           style: form
           explode: false
           schema:
@@ -993,16 +948,6 @@ paths:
         - name: $select
           in: query
           description: Select properties to be returned
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
           style: form
           explode: false
           schema:
@@ -1156,7 +1101,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: mailFolder
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -1466,7 +1410,6 @@ paths:
       tags:
         - users.mailFolder
       summary: Get media content for the navigation property messages from users
-      description: The unique identifier for an entity. Read-only.
       operationId: user.mailFolder.childFolder_GetMessagesContent
       parameters:
         - name: user-id
@@ -1501,6 +1444,13 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
+        - name: $format
+          in: query
+          description: Format of the content
+          style: form
+          explode: false
+          schema:
+            type: string
       responses:
         2XX:
           description: Retrieved media content
@@ -1511,11 +1461,11 @@ paths:
                 format: binary
         default:
           $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
     put:
       tags:
         - users.mailFolder
       summary: Update media content for the navigation property messages in users
-      description: The unique identifier for an entity. Read-only.
       operationId: user.mailFolder.childFolder_SetMessagesContent
       parameters:
         - name: user-id
@@ -1563,56 +1513,7 @@ paths:
           description: Success
         default:
           $ref: '#/components/responses/error'
-    delete:
-      tags:
-        - users.mailFolder
-      summary: Delete media content for the navigation property messages in users
-      description: The unique identifier for an entity. Read-only.
-      operationId: user.mailFolder.childFolder_DeleteMessagesContent
-      parameters:
-        - name: user-id
-          in: path
-          description: The unique identifier of user
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: user
-        - name: mailFolder-id
-          in: path
-          description: The unique identifier of mailFolder
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: mailFolder
-        - name: mailFolder-id1
-          in: path
-          description: The unique identifier of mailFolder
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: mailFolder
-        - name: message-id
-          in: path
-          description: The unique identifier of message
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: message
-        - name: If-Match
-          in: header
-          description: ETag
-          style: simple
-          schema:
-            type: string
-      responses:
-        2XX:
-          description: Success
-        default:
-          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
   '/users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/attachments':
     get:
       tags:
@@ -1653,9 +1554,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/top'
-        - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -1927,7 +1825,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -1976,7 +1873,6 @@ paths:
           x-ms-docs-key-type: message
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -2311,7 +2207,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -2379,7 +2274,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: mailFolder
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -2412,7 +2306,6 @@ paths:
           x-ms-docs-key-type: mailFolder
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -2428,16 +2321,6 @@ paths:
         - name: $select
           in: query
           description: Select properties to be returned
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
           style: form
           explode: false
           schema:
@@ -2528,16 +2411,6 @@ paths:
         - name: $select
           in: query
           description: Select properties to be returned
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
           style: form
           explode: false
           schema:
@@ -2667,7 +2540,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: mailFolder
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -2937,7 +2809,6 @@ paths:
       tags:
         - users.mailFolder
       summary: Get media content for the navigation property messages from users
-      description: The unique identifier for an entity. Read-only.
       operationId: user.mailFolder_GetMessagesContent
       parameters:
         - name: user-id
@@ -2964,6 +2835,13 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
+        - name: $format
+          in: query
+          description: Format of the content
+          style: form
+          explode: false
+          schema:
+            type: string
       responses:
         2XX:
           description: Retrieved media content
@@ -2974,11 +2852,11 @@ paths:
                 format: binary
         default:
           $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
     put:
       tags:
         - users.mailFolder
       summary: Update media content for the navigation property messages in users
-      description: The unique identifier for an entity. Read-only.
       operationId: user.mailFolder_SetMessagesContent
       parameters:
         - name: user-id
@@ -3018,48 +2896,7 @@ paths:
           description: Success
         default:
           $ref: '#/components/responses/error'
-    delete:
-      tags:
-        - users.mailFolder
-      summary: Delete media content for the navigation property messages in users
-      description: The unique identifier for an entity. Read-only.
-      operationId: user.mailFolder_DeleteMessagesContent
-      parameters:
-        - name: user-id
-          in: path
-          description: The unique identifier of user
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: user
-        - name: mailFolder-id
-          in: path
-          description: The unique identifier of mailFolder
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: mailFolder
-        - name: message-id
-          in: path
-          description: The unique identifier of message
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: message
-        - name: If-Match
-          in: header
-          description: ETag
-          style: simple
-          schema:
-            type: string
-      responses:
-        2XX:
-          description: Success
-        default:
-          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
   '/users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/attachments':
     get:
       tags:
@@ -3092,9 +2929,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/top'
-        - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -3334,7 +3168,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -3375,7 +3208,6 @@ paths:
           x-ms-docs-key-type: message
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -3670,7 +3502,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -3722,7 +3553,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: user
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -3966,7 +3796,6 @@ paths:
       tags:
         - users.message
       summary: Get media content for the navigation property messages from users
-      description: The unique identifier for an entity. Read-only.
       operationId: user_GetMessagesContent
       parameters:
         - name: user-id
@@ -3985,6 +3814,13 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
+        - name: $format
+          in: query
+          description: Format of the content
+          style: form
+          explode: false
+          schema:
+            type: string
       responses:
         2XX:
           description: Retrieved media content
@@ -3995,11 +3831,11 @@ paths:
                 format: binary
         default:
           $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
     put:
       tags:
         - users.message
       summary: Update media content for the navigation property messages in users
-      description: The unique identifier for an entity. Read-only.
       operationId: user_SetMessagesContent
       parameters:
         - name: user-id
@@ -4031,40 +3867,7 @@ paths:
           description: Success
         default:
           $ref: '#/components/responses/error'
-    delete:
-      tags:
-        - users.message
-      summary: Delete media content for the navigation property messages in users
-      description: The unique identifier for an entity. Read-only.
-      operationId: user_DeleteMessagesContent
-      parameters:
-        - name: user-id
-          in: path
-          description: The unique identifier of user
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: user
-        - name: message-id
-          in: path
-          description: The unique identifier of message
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: message
-        - name: If-Match
-          in: header
-          description: ETag
-          style: simple
-          schema:
-            type: string
-      responses:
-        2XX:
-          description: Success
-        default:
-          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
   '/users/{user-id}/messages/{message-id}/attachments':
     get:
       tags:
@@ -4089,9 +3892,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/top'
-        - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -4299,7 +4099,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -4332,7 +4131,6 @@ paths:
           x-ms-docs-key-type: message
         - $ref: '#/components/parameters/top'
         - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
         - $ref: '#/components/parameters/count'
         - name: $orderby
@@ -4587,7 +4385,6 @@ paths:
           schema:
             type: string
           x-ms-docs-key-type: message
-        - $ref: '#/components/parameters/search'
         - $ref: '#/components/parameters/filter'
       responses:
         2XX:
@@ -5519,14 +5316,6 @@ components:
       schema:
         minimum: 0
         type: integer
-    search:
-      name: $search
-      in: query
-      description: Search items by search phrases
-      style: form
-      explode: false
-      schema:
-        type: string
     filter:
       name: $filter
       in: query
@@ -5543,6 +5332,14 @@ components:
       explode: false
       schema:
         type: boolean
+    search:
+      name: $search
+      in: query
+      description: Search items by search phrases
+      style: form
+      explode: false
+      schema:
+        type: string
   securitySchemes:
     azureaadv2:
       type: oauth2
