--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
       interval: "daily"
     open-pull-requests-limit: 1
   - package-ecosystem: "nuget"
-    directory: "/"
+    directory: "/src/Authentication/Authentication.Test"
     schedule:
       interval: "daily"
     allow:
