--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,10 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 1
+  - package-ecosystem: "nuget"
+    directory: "/src/Authentication/Authentication.Test"
+    schedule:
+      interval: "daily"
+    allow:
+      - dependency-name: "Moq"
+    open-pull-requests-limit: 1
